Fixed bug on mobile

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 * {
     overflow-x: hidden;
+    color: black;
 }
 
 #wrapper {
@@ -23,6 +24,8 @@
     height: 110px;
     width: auto;
     font-size: 20px;
+    color: black;
+    text-align: center;
 }
 
 #container {
@@ -68,6 +71,8 @@ body {
     border-radius: 3px;
     font-size: 15px;
     font-weight: bold;
+    text-align: center;
+    color: black;
 }
 
 .number:hover {
@@ -85,6 +90,8 @@ body {
     border-radius: 3px;
     font-weight: bold;
     font-size: 20px;
+    color: black;
+    text-align: center;
 }
 
 .dot {
@@ -97,6 +104,8 @@ body {
     border: 1px solid black;
     font-size: 20px;
     font-weight: bold;
+    color: black;
+    text-align: center;
 }
 
 .special:hover {
